# resolve_excel

./: .gitignore  GUI_README.md  README.md  convert_inventory.py  convert_source_backup.py  gui_launcher.py  pyproject.toml  run_gui_mac.sh  run_gui_windows.cmd  run_mac.sh  run_pipeline.py  run_windows.cmd  药品库存.xlsx  饮片货位导入最终文件.xlsx  饮片货位导入模板.xlsx
feixi/: process_feixi.py  run_feixi_mac.sh  run_feixi_windows.cmd
huaining/: process_huaining.py  run_huaining_mac.sh  run_huaining_windows.cmd
snapshots/: final_before_rerun_20260303_170734.xlsx  source_backup_before_rerun_20260303_170734.xlsx
source/: 配方间饮片数据.xls  饮片货位导入备份文件.xlsx
